<resources>
    <string name="support_contact">Cần hỗ trợ nhanh vui lòng gọi 1900 9217 (7:00AM - 10:00PM) hoặc gửi tin nhắn vào Mioto Fanpage</string>
    <string name="support_center">Trung tâm hỗ trợ nhanh</string>
    <string name="message">message</string>
    <string name="call">call</string>
    <string name="call_button_font">sans-serif</string>
    <string name="insurance">Hotline insurance</string>
    <string name="SupportScreenTitleTextStyle">bold</string>
    <string name="information">Information</string>
    <string name="car_model">car model</string>
    <string name="car_id">car id</string>
    <string name="date_received_title">Date received</string>
    <string name="date_returned_title">Date returned</string>
    <string name="date_received">21h00 T2, 20/12/2021</string>
    <string name="date_returned">21h00 T2, 20/12/2021</string>
    <string name="location_title">Location</string>
    <string name="location">Hanoi, Vietnam</string>
    <string name="owner_title">Owner</string>
    <string name="ensure_customer_info">To ensure the security of personal information, Rentaka will send the contact details of the car owner after the customer completes the payment on the app</string>
    <string name="ensure_transact_through_miotto">Transact through Rentaka to ensure we provide the best protection in case of unexpected trip cancellations and insurance-related incidents.</string>
    <string name="trip_total">7 trip</string>
    <string name="rating_number">5.0</string>
    <string name="rental_price_title">Giá thuê 1 ngày</string>
    <string name="rental_insurance_title">Rental insurance</string>
    <string name="rental_price">200.000 / Ngày</string>
    <string name="total_title">Tổng số ngày thuê</string>
    <string name="promotion_title">Mã giảm giá</string>
    <string name="promotion_code_title">Promotion code</string>
    <string name="total_price_per_day">0</string>
    <string name="hint_message">Message for owner</string>
    <string name="message_for_owner_tittle">Ghi chú cho chủ xe</string>
    <string name="final_amount_title">Tổng tiền thanh toán</string>
    <string name="final_amount_textview">825,660 VND</string>
    <string name="a_deposit_through_the_app_title">Tiền cọc 20%</string>
    <string name="pay_upon_retrieving_a_car_title">Tiền trả cho chủ xe</string>
    <string name="deposit_through_the_app">227,660 VND</string>
    <string name="pay_upon_retrieving_car">544,000 VND</string>
    <string name="rental_documents_title">Giấy tờ khi thuê</string>
    <string name="please_choose_one_of_two_methods_title">Vui lòng chọn 1 phương thức</string>
    <string name="driver_license_cccd_collation"><![CDATA[Driver License & CCCD (collation)]]></string>
    <string name="passport_cccd_collation"><![CDATA[Passport & CCCD (collation)]]></string>
    <string name="mortgaged_property_title">Mortgaged property</string>
    <string name="send_rental_request">Send rental request</string>
    <string name="rental_information_title">Rental information</string>
    <string name="mortgaged_property">Received customer doesn\'t have any mortgaged property</string>
    <string name="app_name">Rentaka</string>
    <string name="chuyen_cua_toi">Chuyến của tôi</string>
    <string name="title_activity_personal_profile">PersonalProfileActivity</string>
    <string name="t_i_kho_n">Tài Khoản</string>
    <string name="gi_i_t_nh">Giới tính</string>
    <string name="ng_y_sinh">Ngày sinh</string>
    <string name="chinh_sua_ho_so">Chỉnh sửa hồ sơ</string>
    <string name="t_n_hi_n_th">Tên hiển thị</string>
    <string name="h_y_nh_p_t_n">Hãy nhập tên</string>
    <string name="l_u">Lưu</string>
    <string name="ng_sinh">Ngày sinh</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="nh_p_t_n_hi_n_th">Nhập tên hiển thị</string>
    <string name="ch_n_gi_i_t_nh">Chọn giới tính</string>
    <string name="gi_y_ph_p_l_i_xe">Giấy phép lái xe</string>
    <string name="nh_m_t_tr_c_gplx">Ảnh mặt trước GPLX</string>
    <string name="s_gplx">Số GPLX</string>
    <string name="_0000_0000_0000">0000-0000-0000</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="x_c_nh_n">XÁC NHÂN</string>
    <string name="xac_nhan">Xác Nhận</string>
    <string name="thi_t_l_p_m_t_kh_u">Thiết lập mật khẩu</string>
    <string name="thi_t_l_p_m_t_kh_u_m_i">Thiết lập mật khẩu mới</string>
    <string name="t_ng_t_nh_b_o_m_t_m_t_kh_u_n_n_c_ch_a_c_c_k_t_c_bi_t_c_ch_in_hoa_th_ng_v_k_m_ch_s">Để tăng tính bảo mật, mật khẩu nên có chứa các kí tự đặc biệt, có chữ in hoa, thường và kèm chữ số</string>
    <string name="nh_p_m_t_kh_u_m_i">Nhập mật khẩu mới</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="x_c_nh_n_m_t_kh_u">Xác nhận mật khẩu</string>
    <string name="nh_p_l_i_m_t_kh_u_m_i">Nhập lại mật khẩu mới</string>
    <string name="xe_y_u_th_ch">Xe yêu thích</string>
    <string name="xe_t_l_i">Xe tự lái</string>
    <string name="c_t_i_x">Có tài xế</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="rides">Rides</string>
    <string name="notify">Notify</string>
    <string name="profile">Profile</string>
    <string name="diaDiem">Địa điểm</string>
    <string name="thoiGianThue">Thời gian thuê</string>
    <string name="no_driver">Xe tự lái</string>
    <string name="has_driver">Có tài xế</string>
    <string name="display_location_result">Nhập địa điểm cần tìm kiếm</string>
    <string name="x_c_th_c_s_i_n_tho_i">Xác thực số điện thoại</string>
    <string name="h_th_ng_s_c_p_nh_t_v_g_i_m_t_tin_nh_n_c_ch_a_m_s_x_c_th_c_n_s_i_n_tho_i_c_a_b_n">Hệ thống sẽ cập nhật và gửi một tin nhắn có chữa mã số xác thực đến số điện thoại của bạn.</string>
    <string name="nh_p_s_i_n_tho_i_c_a_b_n">Nhập số điện thoại của bạn</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="nh_p_m_otp">Nhập mã OTP</string>
    <string name="nh_p_m_g_m_6_ch_s_c_g_i_t_i">Nhập mã gồm 6 chữ số được gửi tới</string>
    <string name="ng_nh_p">Đăng Nhập</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="b_n_ch_a_ph_i_l_th_nh_vi_n">Bạn chưa phải là thành viên ?</string>
    <string name="ng_k_ngay">Đăng kí ngay</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="ng_k">Đăng Ký</string>
    <string name="dang_ki">Đăng kí</string>
    <string name="so_dien_thoai">Số điện thoại phải có đúng 10 chữ số</string>
    <string name="b_n_ph_i_tr_n_6_k_t_cho_t_n_hi_n_th">Bạn phải trên 6 kí tự cho tên hiển thị</string>
    <string name="b_n_ph_i_tr_n_4_k_t_cho_t_n_hi_n_th">Bạn phải trên 4 kí tự cho tên hiển thị</string>
    <string name="m_t_kh_u_kh_ng_kh_p">Mật khẩu không khớp</string>
    <string name="m_t_kh_u_ph_i_c_t_nh_t_6_k_t">Mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="m_t_kh_u_kh_ng_c_qu_24_k_t">Mật khẩu không được quá 24 ký tự</string>
    <string name="ng_k_kh_ng_th_nh_c_ng">Đăng kí không thành công</string>
    <string name="dang_ki_khhong_thanh_cong">Đăng kí không thành công</string>
    <string name="khong_tim_thay_ma">Không tìm thấy mã</string>
    <string name="g_i_l_i_m">Gửi lại mã</string>
    <string name="sai_m_t_kh_u_ho_c_t_i_kho_n">Sai mật khẩu hoặc tài khoản</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="email_kh_ng_h_p_l">Email không hợp lệ</string>
    <string name="s_i_n_tho_i_c_ng_k">Số điện thoại đã được đăng ký</string>
    <string name="s_i_n_tho_i_t_n_t_i">Số điện thoại đã tồn tại</string>
    <string name="email">Email</string>
    <string name="nh_p_email_ng_k">Nhập email đã đăng kí</string>
    <string name="b_n_c_ch_c_l_mu_n_ng_xu_t_kh_ng">Bạn có chắc là muốn đăng xuất không .</string>
    <string name="ng_k_th_nh_c_ng">Đăng ký thành công</string>
    <string name="label_time_start">Giờ nhận xe</string>
    <string name="label_time_end">Giờ trả xe</string>
    <string name="time_checkout">20:00</string>
    <string name="time_checkin">20:00</string>
    <string name="labelDateCheckin">Ngày nhận xe</string>
    <string name="labelDateCheckout">Ngày trả xe</string>
    <string name="hintDate_dd_mm_yyyy">10/05/2024</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="x_c_th_c_gi_y_ph_p_l_i_xe">Xác thực giấy phép lái xe</string>
    <string name="xin_ch_o_qu_kh_ch_h_ng">Xin chào Quý khách hàng,</string>
    <string name="inf_gptl_dâata">Nhằm tiếp tục nâng cao chất lượng cộng đồng, cũng như bảo vệ quyền lợi của tất cả các thành viên Mioto khi có sự cố ngoài ý muốn phát sinh trong quá trình thuê xe, BQL Mioto xin thông báo về việc triển khai tính năng Xác thực GPLX. Các bước xác thực được thực hiện online qua app/website Mioto, thời gian thao tác từ 1 - 2 phút, chúng tôi rất mong bạn vui lòng dành ít thời gian để hoàn tất bước xác thực này (thành viên cần xác thực Số điện thoại + GPLX để có thể gửi yêu cầu đặt xe qua Mioto)</string>
    <string name="inf_gptl_huongdan">Bấm vào Ảnh đại diện - chọn Tài khoản - Mục GPLX  </string>
    <string name="gplx_hd">* Nhập số GPLX, họ tên và ngày tháng năm sinh</string>
    <string name="tai_anh">* Tải hình chụp GPLX và bấm \'Cập nhật\' để hoàn tất</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="bao_mat">Chỉ yêu cầu xác thực GPLX cho lần đặt xe đầu tiên Chỉ có chủ xe có thể nhìn thấy thông tin GPLX khi bạn đang thuê xe Thông tin được bảo mật tuyệt đối bởi Mioto</string>
    <string name="cotact_data">Rất mong nhận được sự hợp tác từ bạn, vui lòng liên hệ Mioto qua Mioto Fanpage hoặc hotline 19009217 (7AM - 10PM) nếu bạn cần hỗ trợ</string>
    <string name="xin_ch_n_th_nh_c_m_n">Xin chân thành cám ơn</string>
    <string name="x_c_th_c">Xác Thực</string>
    <string name="support">Support</string>
</resources>