<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItemMenu"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24"/>
    <item
        android:id="@+id/notificationItemMenu"
        android:title="@string/notify"
        android:icon="@drawable/ic_notification_24"/>
    <item
        android:id="@+id/historyItemMenu"
        android:title="@string/rides"
        android:icon="@drawable/ic_car_24"/>
    <item
        android:id="@+id/supportItemMenu"
        android:title="@string/support"
        android:icon="@drawable/ic_message_square"/>
    <item
        android:id="@+id/profileItemMenu"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_24"/>
</menu>