<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/boot_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_sheet_bottom"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/close"
                    android:layout_marginTop="10dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="start|top"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/x_c_th_c_gi_y_ph_p_l_i_xe"
                    android:textSize="@dimen/_22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/gplx_inf" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xin_ch_o_qu_kh_ch_h_ng"
                android:textStyle="bold"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inf_gptl_dâata"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hướng dẫn"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inf_gptl_huongdan"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gplx_hd"
                android:textColor="@color/maudo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tai_anh"
                android:textColor="@color/maudo" />

            <LinearLayout
                android:id="@+id/textNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_note"
                android:backgroundTint="@color/xanh_nhat"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ghi_chu"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bao_mat" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cotact_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/xanh_dam"
                android:text="@string/xin_ch_n_th_nh_c_m_n" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="@dimen/_18sp"
                    android:backgroundTint="@color/xanh_dam"
                    android:text="@string/x_c_th_c" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
