<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/my_account_main">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"

        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Thiet lap mat khau"
            app:titleCentered="true"/>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold"
                android:text="@string/thi_t_l_p_m_t_kh_u_m_i"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sp"
                android:layout_marginTop="10dp"
                android:text="@string/t_ng_t_nh_b_o_m_t_m_t_kh_u_n_n_c_ch_a_c_c_k_t_c_bi_t_c_ch_in_hoa_th_ng_v_k_m_ch_s"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/m_t_kh_u"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18sp"
                    />
                <!-- Thu vien   Material Components  -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/xanh_dam">
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/custom_button_account"
                    android:hint="@string/nh_p_m_t_kh_u_m_i" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/x_c_nh_n_m_t_kh_u"
                    android:textSize="@dimen/_18sp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleTint="@color/xanh_dam">

                    <EditText
                        android:id="@+id/editTextConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:padding="10dp"
                        android:inputType="textPassword"
                        android:background="@drawable/custom_button_account"
                        android:hint="@string/nh_p_l_i_m_t_kh_u_m_i" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:layout_marginBottom="10dp"
               android:gravity="bottom"
               >

               <androidx.appcompat.widget.AppCompatButton
                   android:id="@id/changePassbtn"
                   android:layout_width="match_parent"
                   android:layout_height="70dp"
                   android:backgroundTint="@color/xanh_dam"
                   android:text="@string/thi_t_l_p_m_t_kh_u"
                   android:textColor="@color/white"
                   android:textSize="@dimen/_18sp" />
           </LinearLayout>

        </LinearLayout>
    </LinearLayout>
