<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boot_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_sheet_bottom"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="start|top"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/x_c_th_c_s_i_n_tho_i"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_th_ng_s_c_p_nh_t_v_g_i_m_t_tin_nh_n_c_ch_a_m_s_x_c_th_c_n_s_i_n_tho_i_c_a_b_n"
                android:textSize="@dimen/_15sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconTint="@color/xanh_dam"
                android:id="@+id/textInputLayoutPhone"
                app:hintEnabled="false"
                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:padding="10dp"
                    android:background="@drawable/custom_button_account"
                    android:hint="@string/nh_p_s_i_n_tho_i_c_a_b_n"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textSize="@dimen/_18sp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/xanh_dam"
                android:textColor="@color/white"
                android:text="@string/ti_p_t_c" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>